--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@
 
 NAME='medww'
 PASSWORD='loctar957351jufh'
+DB='django.db.backends.postgresql'
 
 
 SECRET_KEY='django-insecure-jg6ho5=xp4#0r$acz!by++1d011(01qw8!$#n&4&#p-p^4144c'
