--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,6 @@
 NAME='medww'
 PASSWORD='loctar957351jufh'
 DB='django.db.backends.postgresql'
-
+USER='postgres'
 
 SECRET_KEY='django-insecure-jg6ho5=xp4#0r$acz!by++1d011(01qw8!$#n&4&#p-p^4144c'
